// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack vault 1password given: [case1] set validates exid format when: [t0] set with invalid exid format then: the refusal matches its snapshot: stderr-exid-format-invalid 1`] = `
"
🔐 keyrack set
   └─ ✋ ConstraintError: 1password exid must be a secret reference uri (op://vault/item/field)
      ├─ exid: invalid-exid-format
      └─ ran: keyrack set --key ONEPASSWORD_TEST_KEY --env test --vault 1password --exid invalid-exid-format --json

"
`;

exports[`keyrack vault 1password given: [case1] set validates exid format when: [t1] set with valid exid format (op://vault/item/field) then: the render matches its snapshot: render-exid-format-valid 1`] = `
{
  "stderr": "",
  "stdout": "
🔐 keyrack
   └─ ✗ 1password vault must be named 'keyrack'

   provided: op://test-vault/test-item/credential
   expected: op://keyrack/...

   why:
   dev machines are supply chain attack vectors.
   1password is incapable of per-item authorization.
   therefore, keyrack enforces blast-radius limits: dedicated account, dedicated vault.

   (if you need personal creds, use a flatpak-sandboxed browser with 1password)

   to fix:
   1. create a vault named 'keyrack' in your keyrack 1password account
   2. move or copy the item to the 'keyrack' vault
   3. copy the new secret reference: op://keyrack/item/field

   if this bugs you, ask 1password for per-item auth (extract one key, dont unlock vault):
   https://1password.community/discussion/134015/feature-request-account-password-prompt-for-selected-passwords-or-secure-notes

",
}
`;

exports[`keyrack vault 1password given: [case2] repo with 1password vault configured when: [t0] keyrack list --json then: stdout matches snapshot 1`] = `
{
  "testorg.test.ONEPASSWORD_TEST_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "op://test-vault/test-item/credential",
    "maxDuration": null,
    "mech": "PERMANENT_VIA_REFERENCE",
    "meta": null,
    "org": "testorg",
    "slug": "testorg.test.ONEPASSWORD_TEST_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "1password",
  },
}
`;

exports[`keyrack vault 1password given: [case2] repo with 1password vault configured when: [t1] keyrack list (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack list
   └─ testorg.test.ONEPASSWORD_TEST_KEY
      ├─ env: test
      ├─ org: testorg
      ├─ mech: PERMANENT_VIA_REFERENCE
      └─ vault: 1password
"
`;

exports[`keyrack vault 1password given: [case3] 1password keys require unlock when: [t0] get without unlock then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key ONEPASSWORD_TEST_KEY --env test",
  "message": "credential 'testorg.test.ONEPASSWORD_TEST_KEY' does not exist. set it first.",
  "slug": "testorg.test.ONEPASSWORD_TEST_KEY",
  "status": "absent",
}
`;

exports[`keyrack vault 1password with EPHEMERAL_VIA_GITHUB_APP given: [case1] guided setup with mock gh CLI and mock op CLI when: [t0] keyrack set --vault 1password --mech EPHEMERAL_VIA_GITHUB_APP via guided wizard (pseudo-TTY) then: stdout matches snapshot 1`] = `
"🔐 keyrack set testorg.test.GITHUB_TOKEN via EPHEMERAL_VIA_GITHUB_APP
   │
   ├─ which github app?
   │  ├─ options
   │  │  ├─ 1. my-test-app (id: 123456)
   │  │  ├─ 2. other-app (id: 654321)
   │  └─ choice: 1
   │     └─ my-test-app ✓
   │
   ├─ which github app secret?
   │  ├─ private key path (.pem): ./mock-app.pem
   │  └─ pem read ✓
   │
   ├─ where to store in 1password?
   │  ├─ create item in 1password app first
   │  │  ├─ e.g., "Secure Note" named GITHUB_APP_CREDS
   │  │  └─ then right-click field → "Copy Secret Reference"
   │  └─ paste the uri below
   │     └─ op://test-vault/github-app/credential
   │
   └─ perfect, now let's verify...
      └─ ✓ roundtrip verified
⠀
🔐 keyrack set (org: testorg, env: test)
   └─ testorg.test.GITHUB_TOKEN
      ├─ mech: EPHEMERAL_VIA_GITHUB_APP
      └─ vault: 1password"
`;

exports[`keyrack vault 1password with EPHEMERAL_VIA_GITHUB_APP given: [case1] guided setup with mock gh CLI and mock op CLI when: [t1] keyrack list --json after guided set then: stdout matches snapshot 1`] = `
{
  "testorg.test.GITHUB_TOKEN": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "op://test-vault/github-app/credential",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_GITHUB_APP",
    "meta": null,
    "org": "testorg",
    "slug": "testorg.test.GITHUB_TOKEN",
    "updatedAt": "__TIMESTAMP__",
    "vault": "1password",
  },
}
`;

exports[`keyrack vault 1password: op cli not installed given: [case6] op cli not installed when: [t0] set --vault 1password without op cli then: the refusal matches its snapshot: stdout-op-cli-absent 1`] = `
"
🔐 keyrack set
   └─ ✗ op cli not found

   to install on ubuntu:

   1. install 1password app:
      curl -sS https://downloads.1password.com/linux/keys/1password.asc | \\
        sudo gpg --dearmor --output /usr/share/keyrings/1password-archive-keyring.gpg

      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/$(dpkg --print-architecture) stable main" | \\
        sudo tee /etc/apt/sources.list.d/1password.list

      sudo apt update && sudo apt install 1password

   2. install 1password cli:
      sudo apt install 1password-cli

   3. verify installation:
      op --version

   4. authenticate:
      open 1password app > settings > developer > "integrate with 1password cli"

"
`;
